[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Levels/GLevel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Controls/Controls.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=3]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.1
glow_blend_mode = 0

[node name="GLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 100, 200 )

[node name="Controls" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
[connection signal="move_left" from="Controls" to="." method="_on_Controls_move_left"]
[connection signal="move_right" from="Controls" to="." method="_on_Controls_move_right"]
